kleine schoonmaak code

--- a/pearle menu/index.html
+++ b/pearle menu/index.html
@@ -58,11 +58,11 @@
 					</li>
 					<li class="mandje1">
 						<a class="mandje" href="#"> <img class="icon-winkel" src="img/mandje.png">$ 129,99</a>
-						<!-- <div class="count-mandje">2</div> -->
 					</li>
 				</ul>	
 			</div>
 
+			<!-- winkelmandje (stukje inline-styling) -->
 			<div class="winkelmandje-dropdown">
 				<table width="100%">
 					<tr>
@@ -117,7 +117,8 @@
 					</tr>		
 				</table>
 				<a class="btn-orange" href="#">	Ga naar uw winkelmand </a>
-			</div>	
+			</div>
+			<!-- end inline styling -->	
 
 			<nav>
 				<ul>
@@ -166,65 +167,8 @@
 	
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-<!-- <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script> -->
 <script src="js/index.js"></script>
 
-<style>
 
-
-
-
-</style>
-
-
-<script>
-	$(document).ready( function() {
-
-	// var stickyHeader = $('.sticky-header');
-
-	// if ($(window).scrollTop() < 300) {
-	// 	$('.sticky-header').addClass('color');
-	// } else {
-	// 	$('.sticky-header').removeClass('color');
-	// }
-
-
-	// $(window).scroll(function(){
-	//   if( $(window).scrollTop() >= 140 ) {
-	//   	$('.sticky-header').fadeIn(300, function() {
-	//     	$('.sticky-header').addClass('visible');
-	//     });	
-	//   } else {
-	//   	$('.sticky-header').fadeOut(100, function() {
-	//     	$('.sticky-header').removeClass('visible');
-	//     });	
-	//   }
-	// });
-
-
-
-
-	 // var stickyNavTop = $('.stickynav').offset().top;
-  //       var stickyNav = function() {
-  //           var scrollTop = $(window).scrollTop();
-
-  //           if (scrollTop > 138) {
-  //               $('.stickynav').addClass('sticky');
-  //               $('.stickynav').fadeIn("fast");
-  //               //move winkelmandje with stickynav
-  //               $('.inhoud-winkelmand').addClass('sticky-basket');
-  //           }
-  //           if (scrollTop < 138) {
-  //               $('.stickynav').fadeOut("fast");
-  //               $('.inhoud-winkelmand').removeClass('sticky-basket');
-  //           }
-  //       };
-  //       stickyNav();
-  //       $(window).scroll(function() {
-  //           stickyNav();
-  //       });
-
-	});
-</script>
 </body>
 </html>
