opschoning + button-winkelmand herplaatst

--- a/pearle menu/index.html
+++ b/pearle menu/index.html
@@ -12,7 +12,7 @@
 	<div class="sticky-header">
 		<div class="wrapper">
 			<a href="#"><img src="img/pearlelogosmall.png"></a>
-			<input class="input-zoek-product-merk" type="text" placeholder="Zoek op product of merk" rel="Zoek op product of merk" name="" maxlength="28">
+			<!-- <input class="input-zoek-product-merk" type="text" placeholder="Zoek op product of merk" rel="Zoek op product of merk" name="" maxlength="28"> -->
 			<ul>
 				<li>
 					<a class="vind-winkel" href="#"> <img class="icon-winkel-sticky" src="img/vind-winkel.png">Vind een winkel</a>
